@@ -1,4 +1,10 @@
-2008-06-28  Sebastien Pouliot  <sebastien@ximian.com> 
+2008-06-28  Sebastien Pouliot  <sebastien@ximian.com>
+
+	* Mono.Cecil/SecurityDeclarationReader.cs
+	* Mono.Cecil/NullReferenceImporter.cs
+	* Mono.Cecil/TableComparers.cs:
+		Seal non-visible classes.
+		[Found using Gendarme AvoidUnsealedUninheritedInternalClassesRule]
 
 	* Mono.Cecil/AssemblyNameReference.cs:
 		Use String.Length > 0 instead of comparing to String.Empty
